# AutoWriter

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
.claude/agents/: architect.md  continuity-tracker.md  editor.md  reader.md  researcher.md  screenwriter.md  spec-reviewer.md  stylist.md
autowriter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
books/无尽人生/: characters.md  continuity-state.md  outline.md  story-state.md
books/测试小说/: characters.md  outline.md  story-state.md
books/英伦崛起/: characters.md  continuity-state.md  outline.md  pipeline-state.md  story-state.md
books/赛博朋克2076/: story-state.md
books/超级好友/: outline.md  story-state.md
docs/: llm resource.md  system design.md  ui-design.md
migrations/: env.py  script.py.mako
migrations/versions/: a461b42a2b01_create_core_tables.py
novel_system/: __init__.py
novel_system/backend/: __init__.py  main.py
novel_system/config/: README.md
novel_system/frontend/: api.py  app.py  i18n.py  stages.py  ui_styles.py
novel_system/scripts/: restart_apps.sh  start_services.sh
references/: blueprint-template.md  chapter-brief-template.md  characters-template.md  continuity-state-template.md  feedback-template.md  golden-finger-research.md  model-adaptations.md  outline-template.md  pipeline-state-template.md  reader-spec-template.md  review-template.md  script-template.md  story-planning-template.md  story-state-template.md  style-guide.md
src/autowriter.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: test_services.py
tools/: lint-chapter.sh
(+49 files in other folders)
