[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autowriter"
version = "0.1.0"
description = "Personal novel writing helper with simple project management and AI-friendly hooks."
authors = [{ name = "AutoWriter", email = "author@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
autowriter = "autowriter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
